apps/dg/resources/dg.css
/* ... */
@font-face {font-family: 'MuseoSans-500';src: static_url('webfonts/MuseoSans_500.svg') format('svg');}
@font-face {font-family: 'MuseoSans-500-Italic';src: static_url('webfonts/MuseoSans_500_Italic.otf') format('otf');}
@font-face {font-family: 'MuseoSans-500-Italic';src: static_url('webfonts/MuseoSans_500_Italic.ttf') format('truetype');}
@font-face {font-family: 'MuseoSans-500-Italic';src: static_url('webfonts/MuseoSans_500_Italic.eot') format('embedded-opentype');}
@font-face {font-family: 'MuseoSans-500-Italic';src: static_url('webfonts/MuseoSans_500_Italic.woff') format('woff');}
@font-face {font-family: 'MuseoSans-500-Italic';src: static_url('webfonts/MuseoSans_500_Italic.svg') format('svg');}
@font-face {font-family: 'Montserrat-Regular';src: static_url('webfonts/Montserrat-Regular.otf') format('otf');}
@font-face {font-family: 'Montserrat-Regular';src: static_url('webfonts/Montserrat-Regular.ttf') format('truetype');}
@font-face {font-family: 'Montserrat-Regular';src: static_url('webfonts/Montserrat-Regular.eot') format('embedded-opentype');}
@font-face {font-family: 'Montserrat-Regular';src: static_url('webfonts/Montserrat-Regular.woff') format('woff');}
@font-face {font-family: 'Montserrat-Regular';src: static_url('webfonts/Montserrat-Regular.svg') format('svg');}
@font-face {font-family: 'Montserrat-Bold';src: static_url('webfonts/Montserrat-Bold.otf') format('otf');}
@font-face {font-family: 'Montserrat-Bold';src: static_url('webfonts/Montserrat-Bold.ttf') format('truetype');}
@font-face {font-family: 'Montserrat-Bold';src: static_url('webfonts/Montserrat-Bold.eot') format('embedded-opentype');}
@font-face {font-family: 'Montserrat-Bold';src: static_url('webfonts/Montserrat-Bold.woff') format('woff');}
@font-face {font-family: 'Montserrat-Bold';src: static_url('webfonts/Montserrat-Bold.svg') format('svg');}
@font-face {font-family: 'icomoon';src: static_url('icon_fonts/icomoon.ttf') format('truetype');}
@font-face {font-family: 'icomoon';src: static_url('icon_fonts/icomoon.eot') format('embedded-opentype');}
@font-face {font-family: 'icomoon';src: static_url('icon_fonts/icomoon.woff') format('woff');}
@font-face {font-family: 'icomoon';src: static_url('icon_fonts/icomoon.svg') format('svg');}

html, body {
    /* cf. https://www.bram.us/2016/05/02/prevent-overscroll-bounce-in-ios-mobilesafari-pure-css/ */
    position: fixed;
    overflow: hidden;
    /* cf. https://developers.google.com/web/updates/2017/11/overscroll-behavior */
    overscroll-behavior: none;

    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
    -webkit-touch-callout: none;
}

/* SproutCore inexplicably left out -ms-user-select and -webkit-user-select */
.sc-view.allow-select {
    -khtml-user-select: text;
    -moz-user-select: text;
    -ms-user-select: text;
    -webkit-user-select: text;
    user-select: text;
    cursor:  text;
}

#codap {
    position: absolute;
    height: 100vh;
    width: 100vw;
}

.dg-splash {
    background-color: white !important;
}

.dg-receive-outside-drop {
    border: 3px solid yellow !important;
}

.dg-busy-cover {
    cursor: wait;
    background-color: rgba(255, 255, 255, 0.01) !important;
    z-index: 1000000;
}

/* Default font for case tables */
.dg-case-table {
    font-family: 'Montserrat-Regular', sans-serif !important;
    font-size: 8pt !important;
}

.dg-case-table-title {
    font-style: italic;
    font-size: 15px;
    color: rgba(15,38,51,1);
    text-align: center;
    padding-top: 4px;
    padding-bottom: 4px;
    background-color: #bddfdf;
    white-space: nowrap;
}

.slick-header-column.dg-new-attr-column-header {
    margin-top: -3px;
    background-image: static_url('images/ic_add_black_24dp_1x.png');
    background-position: center;
    background-repeat: no-repeat;
}

/* reset hover styles set elsewhere */
.slick-header-column.dg-new-attr-column-header:hover {
    margin-top: -3px;
    /*background-color: #e6e6e6;*/
    background-image: static_url('images/ic_add_black_24dp_1x.png');
    background-position: center;
    background-repeat: no-repeat;
}

.dg-new-attr-column {
    border: none;
    background-color: white;
}

.dg-new-attr-column.selected {
    border: none;
    background-color: white;
}

.dg-qualitative-backing {
    width: 100%;
    display: block;
    height: 7px;
    border-radius: 3px;
    background-color: lightgrey;
}

.dg-qualitative-bar {
    display: block;
    height: 7px;
    border-width:0;
    border-radius: 3px;
    box-sizing: border-box;
}

.dg-boundary-thumb {
    position: absolute;
    top: -2px;
}

.dg-color-table-cell {
    display: inline-block;
    width: 100%;
    height: 100%;
}

.dg-calculator label {
    cursor: pointer;
}

.dg-toolshelf-button {
    overflow: visible;
}

.dg-icon-label {
    color: black;
    font-size: 11px !important;
    cursor: pointer;
}

.dg-icon-button-blip {
    background-image: static_url('images/arrow-moreIconOptions.svg');
}

.navBar {
    background-color: #005060;
    /* allow CFM dialogs to display outside the navBar */
    overflow: visible;
}

.navBar .leftSide {
    /* allow CFM dialogs to display outside the navBar */
    overflow: visible;
}

.navBar .modal-dialog {
    /* override bottom: 0; for CFM dialogs */
    bottom: auto !important;
}

.navBar .modal-dialog input {
    /* keep filename input from extending past edge of dialog */
    width: 97% !important;
}

.navBar .modal-dialog .tabbed-panel .buttons {
    /* buttons should be flush right in the dialog */
    position: relative;
    float: right;
}

.navBar .sc-view {
    color: white;
    font-family: 'Montserrat-Regular', sans-serif;
    font-size: 10pt;
}

.navBar-version {
    font-size: 9pt;
}

.navBar-status {
    font-size: 9pt;
}

.doc-title {
    text-align: left;
    font-weight: bold;
    cursor: text;
    padding-left: 3px;
}

.doc-title:hover {
    text-decoration: underline;
}
/* ... */

